--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,26 @@
+attrs==19.3.0
 certifi==2019.6.16
 chardet==3.0.4
 Click==7.0
 idna==2.8
+importlib-metadata==0.23
 itsdangerous==1.1.0
+jsonschema==3.1.1
 loguru==0.3.2
 MarkupSafe==1.1.1
+more-itertools==7.2.0
 netifaces==0.10.6
+notifiers==1.2.1
+pyrsistent==0.15.5
 pyserial==3.4
 PySimpleGUI==4.4.1
+PySocks==1.7.1
 python-dotenv==0.10.3
 python-engineio==3.9.3
 python-socketio==4.3.1
 requests==2.22.0
+rfc3987==1.3.8
 six==1.12.0
 soupsieve==1.9.4
 urllib3==1.25.3
+zipp==0.6.0
