--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 attrs==19.3.0
-certifi==2019.6.16
+certifi==2019.9.11
 chardet==3.0.4
 Click==7.0
 idna==2.8
@@ -9,18 +9,19 @@ jsonschema==3.1.1
 loguru==0.3.2
 MarkupSafe==1.1.1
 more-itertools==7.2.0
-#netifaces==0.10.6
+netifaces==0.10.9
 notifiers==1.2.1
 pyrsistent==0.15.5
 pyserial==3.4
-PySimpleGUI==4.4.1
+PySimpleGUI==4.6.0
 PySocks==1.7.1
 python-dotenv==0.10.3
-python-engineio==3.9.3
+python-engineio==3.10.0
 python-socketio==4.3.1
 requests==2.22.0
 rfc3987==1.3.8
-six==1.12.0
-soupsieve==1.9.4
-urllib3==1.25.3
+six==1.13.0
+soupsieve==1.9.5
+urllib3==1.25.7
+websocket-client==0.56.0
 zipp==0.6.0
