--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,27 @@
-attrs==19.3.0
-certifi==2019.9.11
-chardet==3.0.4
-Click==7.0
-idna==2.8
-importlib-metadata==0.23
-itsdangerous==1.1.0
-jsonschema==3.1.1
-loguru==0.3.2
-MarkupSafe==1.1.1
-more-itertools==7.2.0
-netifaces==0.10.9
-notifiers==1.2.1
-pyrsistent==0.15.5
-pyserial==3.4
+attrs
+certifi
+chardet
+Click
+idna
+importlib-metadata
+itsdangerous
+jsonschema
+loguru
+MarkupSafe
+more-itertools
+netifaces
+notifiers
+pyrsistent
+pyserial
 PySimpleGUI
-PySocks==1.7.1
-python-dotenv==0.10.3
-python-engineio==3.10.0
-python-socketio==4.3.1
-requests==2.22.0
-rfc3987==1.3.8
-six==1.13.0
-soupsieve==1.9.5
-urllib3==1.25.7
-websocket-client==0.56.0
-zipp==0.6.0
+PySocks
+python-dotenv
+python-engineio
+python-socketio
+requests
+rfc3987
+six
+soupsieve
+urllib3
+websocket-client
+zipp
